ix-portal-init.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ix-portal-init
  labels:
    app: ixcloudapp
  namespace: default
spec:
    restartPolicy: Never
    containers:
    - image: unitedplanet/intrexx:steady-latest
      name: ixcloudapp
      imagePullPolicy: IfNotPresent
      args: ["echo", "done"]
      volumeMounts:
      - mountPath: /opt/intrexx/org
        name: ixcloudapp-volume
    volumes:
    - name: ixcloudapp-volume
      persistentVolumeClaim:
        claimName: ix-pvc
