ix-portal.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ix-portal
  labels:
    app: ixcloudapp
  namespace: default
spec:
    restartPolicy: Always
    containers:
    - image: unitedplanet/intrexx:steady-latest
      name: ixcloudapp
      imagePullPolicy: IfNotPresent
      command: ["/opt/intrexx/bin/linux/portal.sh"]
      args: ["/opt/intrexx/org/portal"]
      volumeMounts:
      - mountPath: /opt/intrexx/org
        name: ixcloudapp-volume
    volumes:
    - name: ixcloudapp-volume
      persistentVolumeClaim:
        claimName: ix-pvc
