ix-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ix-ingress
  namespace: default
  annotations:
   kubernetes.io/ingress.class: traefik-external
   traefik.ingress.kubernetes.io/router.entrypoints: websecure
   traefik.ingress.kubernetes.io/router.tls: "true"
   external-dns.alpha.kubernetes.io/hostname: external.url.com
   traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  rules:
  - host: external.url.com
    http:
      paths:
      - backend:
          service:
            name: ix-ingress
            port:
              number: 8101
        path: /IxManagerRest/
        pathType: Prefix
      - backend:
          service:
            name: ix-ingress
            port:
              number: 1337
        path: /
        pathType: Prefix
status: {}
